--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,8 +2,11 @@
 [phases.setup]
 nixPkgs = ["nodejs_20"]
 
+[phases.install]
+cmds = ["npm ci"]
+
 [phases.build]
-cmds = ["npm install", "npm run build"]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npx serve dist -l $PORT"
+cmd = "npm run start"
