--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "start": "serve dist -p ${PORT:-4321}",
+    "start": "serve dist -l tcp://0.0.0.0:${PORT:-4321}",
     "astro": "astro"
   },
   "dependencies": {
