--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,5 @@
 [build]
 builder = "nixpacks"
 
-[build.nixpacks]
-providers = ["node"]
-
 [deploy]
-startCommand = "npx serve dist -l $PORT"
+startCommand = "npx serve dist --listen 0.0.0.0:$PORT"
