--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "serve": "^14.2.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.5"
   }
 }
